---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: ????
  Features:
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2022-12-30
  Changes:
    - Renamed "requisite" to "descendant" - requisite was not a valid word for the context
  Bugfixes:
    - Fixed a memory leak and infinite loop when migrating with an infinite technology in the queue
    - Fixed several bugs related to hidden and disabled technologies being changed at runtime
    - Fixed that disabled technologies would always be shown in the tech info panel
    - Fixed that you were able to queue disabled technologies
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2022-12-21
  Bugfixes:
    - Fixed a crash when queuing to front a technology with no prerequisites
    - Fixed that clicking the "open in graph" button without a technology selected would do nothing
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2022-12-20
  Bugfixes:
    - Fixed a crash when a player is invalidated during on_init
    - Fixed a crash when a technology is removed from the game
    - Fixed that technologies with `visible_when_disabled` set would not be shown correctly
    - Fixed that the techs list would include hidden technologies
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2022-12-20
  Compatibility:
    - Added incompatibility with Improved Research Queue - the two mods break one another
  Bugfixes:
    - Fixed that the active research would not be added to the queue when adding to an existing game
    - Removed technology slot clicked debug logging
---------------------------------------------------------------------------------------------------
Version: 1.0.0