@@ -181,7 +181,7 @@ script.on_event(defines.events.on_research_finished, function(e)
   end
   if research_queue.contains(force_table.queue, technology, level) then
     research_queue.requeue_multilevel(force_table.queue)
-    research_queue.remove(force_table.queue, technology, level)
+    research_queue.remove(force_table.queue, technology, level, true)
   end
 
   util.schedule_force_update(force)
